--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title> My First Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   <section class="Top-Baner">
+      <div class="half-width"> <h1> Welcome To</h1>
+        <h1><span class="orange"> Hm Sadikur Rahman Sani</span> World!</h1>
+        <h3> Amar Poricoy </h3>
+         <p> Assalamo Alaikum.Sobay Kemon Asen.Asa Kori Allahor Rahmote Apnara Sobay Vallo Asen.To Ami Amar Kiso Poricoy Apnader dicchi. Amar jela Hocce Narayoungunj.thana Hocce Sonarga.uniuon hocce jampur.Ebog Gram Hocce Pakunda Nama Para Ami Gramer Ekjon Sadaron Femilir Sontan.Amar  </p>
+         <a class=" hier-button"target="_blank" href="https://www.linkedin.com/onboarding/start/profile-location/new/">HIRE ME</a>
+      </div>
+    <div class="half-width">
+      <img src="my-bg.png" alt="">
+    </div>
+ 
+</section>
 </body>
 </html>
