--- a/index.html
+++ b/index.html
@@ -11,17 +11,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <section class="Top-Baner">
-      <div class="half-width"> <h1> Welcome To</h1>
-        <h1><span class="orange"> Hm Sadikur Rahman Sani</span> World!</h1>
-        <h3> Amar Poricoy </h3>
-         <p> Assalamo Alaikum.Sobay Kemon Asen.Asa Kori Allahor Rahmote Apnara Sobay Vallo Asen.To Ami Amar Kiso Poricoy Apnader dicchi. Amar jela Hocce Narayoungunj.thana Hocce Sonarga.uniuon hocce jampur.Ebog Gram Hocce Pakunda Nama Para Ami Gramer Ekjon Sadaron Femilir Sontan.Amar  </p>
-         <a class=" hier-button"target="_blank" href="https://www.linkedin.com/onboarding/start/profile-location/new/">HIRE ME</a>
-      </div>
-    <div class="half-width">
+<section class="Top-Baner">
+       <div class="half-width"> <h1> Welcome To</h1>
+            <h1><span class="orange"> Hm Sadikur Rahman Sani</span> World!</h1>
+            <h3> Amar Poricoy </h3>
+            <p> Assalamo Alaikum.Sobay Kemon Asen.Asa Kori Allahor Rahmote Apnara Sobay Vallo Asen.To Ami Amar Kiso Poricoy Apnader dicchi. Amar jela Hocce Narayoungunj.thana Hocce Sonarga.uniuon hocce jampur.Ebog Gram Hocce Pakunda Nama Para Ami Gramer Ekjon Sadaron Femilir Sontan.Amar  </p>
+            <a class=" hier-button"target="_blank" href="https://www.linkedin.com/onboarding/start/profile-location/new/">HIRE ME</a>
+        </div>
+       <div class="half-width">
       <img src="my-bg.png" alt="">
     </div>
- 
+</section>
+<section class="to-part">
+    <div class="half-width">
+        <img src="my-bg (1).png" alt="">
+    </div>
+    <div class="half-width">
+        <h1>Dream Big</h1>
+        <h2>Become a web developer</h2>
+        <p> ami web developer sekhar jonno prosthoti nicci. apnader kase dowa cai apnara amar jonno dowa korben .ami jeno amr asa poron korte pari.allah jeno amake tawfik dan koren .AMIN allha hafej sobay vallo thakben. </p>
+        <a class=" hier-button"target="_blank"  href="https://web.facebook.com/profile.php?id=100066865836961">Facebook</a>
+    </div>
 </section>
 </body>
 </html>
