--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<section class="Top-Baner">
+<section class="Top-Baner flex">
        <div class="half-width"> <h1> Welcome To</h1>
             <h1><span class="orange"> Hm Sadikur Rahman Sani</span> World!</h1>
             <h3> Amar Poricoy </h3>
@@ -22,7 +22,7 @@
       <img src="my-bg.png" alt="">
     </div>
 </section>
-<section class="to-part">
+<section class="to-part flex">
     <div class="half-width">
         <img src="my-bg (1).png" alt="">
     </div>
@@ -32,6 +32,21 @@
         <p> ami web developer sekhar jonno prosthoti nicci. apnader kase dowa cai apnara amar jonno dowa korben .ami jeno amr asa poron korte pari.allah jeno amake tawfik dan koren .AMIN allha hafej sobay vallo thakben. </p>
         <a class=" hier-button"target="_blank"  href="https://web.facebook.com/profile.php?id=100066865836961">Facebook</a>
     </div>
+</section>
+<section class="tree-part">
+    <h1>Experience</h1>
+    <div class="flex margin">
+         <div id="full-stok" class="half-width singel-ex">
+            <h1>Full Stok Web Developar</h1>
+            <h2><span class="orange">2021!-Web Developar Jarni Soro</span> </h2>
+             <p>insaallah 2021 thake web developar hobar jonno pipareson nicchi. apnara sobay amar jonno dowa korben ami jeno amar asa poron korte pari allah hafej apnara sobay vallo thakben nijer dike khayel rahakben pori bar porijon sobar jonno dowa korbev  </p>
+    </div>
+    <div id="baby" class="half-width singel-ex">
+        <h1>Mison Poron Korar Asa</h1>
+        <h2><span class="orange">2022!- Isaallah</span></h2>
+        <p>insa allah allah jodi tawfik den ei ekbocor pora ami web debelopar er jonno somoy dibo .kono kiso pete hole onno arekta jinis teg korte hoy . thak abog sadona ene dite pare tomar sopner bastobayon so nije ke toiri koro dek be ekdin tomake sobay khojbe</p>
+    </div>
+</div>
 </section>
 </body>
 </html>
